feat: update valid & exception